# OpenAI4S

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  setup.sh  start.sh
docs/: architecture.md  compute.md  configuration.md  security.md  skills.md  webapp.md
envs/: phylo.yml  python.yml  r.yml  struct.yml
openai4s/: __init__.py  __main__.py  config.py  egress.py  host_dispatch.py  jobs.py  llm.py  mcp_client.py  permissions.py  pkgscan.py  prompts.py  replay.py  store.py  webtools.py
openai4s/agent/: __init__.py  compaction.py  delegation.py  loop.py
openai4s/cli/: __init__.py  main.py
openai4s/compute/: __init__.py  manager.py  registry.py
openai4s/kernel/: __init__.py  background.py  environments.py  guards.py  manager.py  preinstall.py  provenance.py  worker.py
openai4s/mcp_servers/: __init__.py  example_server.py
openai4s/sdk/: __init__.py  host.py
openai4s/security/: __init__.py  audit_hook.py  biosecurity.py  classifier.py  injection.py
openai4s/server/: __init__.py  daemon.py  gateway.py
openai4s/skills_loader/: __init__.py  loader.py
openai4s_compute_provider/: __init__.py  __main__.py  _channel.py  _constants.py  _protocol.py  _resident.py
scripts/: fold_remote.sh  setup_envs.sh
tests/: conftest.py  test_agent.py  test_compute_nvidia.py  test_e2e.py  test_egress.py  test_environments.py  test_gateway.py  test_kernel.py  test_llm_providers.py  test_methodology_skills.py  test_orchestration_skills.py  test_permissions.py  test_plan.py  test_security.py  test_skills.py  test_webtools.py
(+41 files in other folders)
